src/variables.scss
$primary-color: #462A7A;
$secondary-color: #C792EA;
$tertiary-color: #892A93;
$background-color: #f2e6f9;
$accent-color: #FCFF80;

$black-color: #222;
$white-color: #fafafa;

$small-device-width: 1080px;
$small-device-height: 900px;

